@@ -105,9 +105,6 @@ static const string iceProps[] =
     "ChangeUser",
     "Config",
     "ConnectionIdleTime",
-    "Daemon",
-    "DaemonNoChdir",
-    "DaemonNoClose",
     "Default.Host",
     "Default.Locator",
     "Default.Protocol",
